fix sticky caption positioning to not overlap card
at low width (<720px)

--- a/src/pages/website-pages/landing/landing.scss
+++ b/src/pages/website-pages/landing/landing.scss
@@ -74,6 +74,10 @@
     position: relative;
     max-width: 1160px;
     width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+    padding-bottom: 1.5em;
   }
 
   &__search-card {
@@ -82,20 +86,15 @@
     left: 0;
   }
 
-  &__caption-sticky-container {
-    position: absolute;
-    top: 0; bottom: 0; right: 0;
-    width: fit-content;
-    display: flex;
-    align-items: end;
-    padding-bottom: 1.5em;
-  }
-
   &__caption {
     position: sticky;
     bottom: 1.5em;
     right: 0;
     max-width: 20em;
     text-align: right;
+
+    @media (max-width: 720px) {
+      top: 500px;
+    }
   }
 }
